Added backend for anonymous post selection during post creation, and anonymous fields for dependent files
