# src/controllers/composer.js
@@ -47,6 +47,7 @@ exports.post = async function (req, res) {
 		timestamp: Date.now(),
 		content: body.content,
 		handle: body.handle,
+		anonymous: body.anonymous,
 		fromQueue: false,
 	};
 	req.body.noscript = 'true';
